fixed the typo in the url and added a div and box around the img tag in html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ a div/img tag that you can output the image into -->
 <div class="buttons">
   <button type="button" name="Click" id="click_button">Click</button>
 </div>
+<div class="image_box">
   <img id="image">
+</div>
+
 <script src="js/scripts.js"></script>
 </body>
 </html>
